# QuackHack2026

./: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  main.py  pnpm-lock.yaml  pyproject.toml
.githooks/: pre-commit  pre-commit.ps1  pre-commit.sh
.github/agents/: model-sync.agent.md
.github/workflows/: ci.yml
backend/: app.py  auth.py  database.py  dependencies.py  models.py  sql_migration.py  webhook.py
backend/controller/: auth.py  bank.py  impulses.py  users.py
backend/migrations/: 001_initial_schema.postgresql.sql  001_initial_schema.sqlite.sql  002_users_created_at_index.sqlite.sql  003_banking_and_impulse_schema.postgresql.sql  003_banking_and_impulse_schema.sqlite.sql  004_seed_admin_and_impulse_zones.postgresql.sql  004_seed_admin_and_impulse_zones.sqlite.sql  005_add_user_roles.postgresql.sql  005_add_user_roles.sqlite.sql  006_add_source_account_to_transactions.postgresql.sql  006_add_source_account_to_transactions.sqlite.sql  007_drop_users_type_column.postgresql.sql  007_drop_users_type_column.sqlite.sql  008_add_impulse_limit_and_tax_to_user_metadata.postgresql.sql  008_add_impulse_limit_and_tax_to_user_metadata.sqlite.sql  009_add_user_id_to_possible_impulse_zones.postgresql.sql  (+6 more)
data/: stables.db
frontend/: Makefile  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
tests/: test_auth_app_database.py  test_bank_service.py  test_dependencies_and_app_static.py  test_sql_migration.py  test_user_service.py
(+200 files in other folders)
