[project]
name = "quackhack2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[argon2]>=1.7.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.22",
]
